--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-markdown": "^5.0.3"
+    "react-markdown": "^5.0.3",
+    "swr": "^0.5.6"
   },
   "license": "MIT"
 }
