--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-lottie": "^1.2.3",
     "react-markdown": "^5.0.3",
     "swr": "^0.5.6"
   },
