--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^14.1.2",
-    "next": "^11.0.0",
-    "next-sitemap": "^1.6.9",
-    "prismjs": "^1.23.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-lottie": "^1.2.3",
-    "react-markdown": "^5.0.3",
-    "swr": "^0.5.6"
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "lottie-react": "^2.3.1",
+    "next": "^12.2.5",
+    "next-sitemap": "^3.1.18",
+    "prismjs": "^1.28.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
+    "swr": "^1.3.0"
   },
   "license": "MIT"
 }
