--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@contentful/rich-text-react-renderer": "^15.16.2",
     "lottie-react": "^2.3.1",
-    "next": "^12.2.5",
-    "next-sitemap": "^3.1.18",
-    "prismjs": "^1.28.0",
+    "next": "^13.1.6",
+    "next-sitemap": "^3.1.52",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.3",
-    "swr": "^1.3.0"
+    "react-markdown": "^8.0.5",
+    "swr": "^2.0.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@playwright/test": "^1.30.0"
+  }
 }
